--- a/skel_recipes/recipes/services/owncloud/Dockerfile
+++ b/skel_recipes/recipes/services/owncloud/Dockerfile
@@ -9,5 +9,6 @@ WORKDIR /tmp
 ADD manifest.pp /tmp/manifest.pp
 ADD data/start.sh /tmp/start.sh
 ADD data/casserver.cer /tmp/casserver.cer
+ADD data/config.php /var/www/html/owncloud/config/config.php
 
 CMD ["/bin/bash", "/tmp/start.sh", "-d"]
