--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "js-yaml": "3.5.2",
     "form-data": "1.0.0-rc3",
     "fs-extra": "~0.26.5",
-    "machine_learning": "0.0.8"
+    "machine_learning": "0.0.8",
+    "fstream": "1.0.8"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
